<resources>
    <string name="app_name">Delta Task 2WO</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contentdesc_contactimage">Contact Image</string>
    <string name="button_newcontact">Create New Contact</string>
    <string name="title_activity_newcontactactivity">newcontactactivity</string>
    <string name="entername">Enter Name here</string>
    <string name="enterphone">Enter Phone Number here</string>
    <string name="go">GO</string>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">SORT DESCENDING</string>
    <string name="contact_search">Contact Search</string>
    <string name="search">Search</string>
</resources>
