<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.deltainductions.rb.deltatask2.newcontactactivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/entername"
        android:ems="10"
        android:id="@+id/editTextname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enterphone"
        android:ems="10"
        android:id="@+id/editTextnumber"
        android:layout_below="@+id/editTextname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/buttongo"
        android:layout_below="@+id/editTextnumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp" />
</RelativeLayout>
